--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@
        color:#e2e2e2;
        top:50%;
        left:50%
-       postion:absolute
+       postion:absolute;
        transform:transform;
 }
 
