--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="banner darky">
-                <div class="banner-text">
+                <div class="banner-text text-center">
                     <h1>ToDo App</h1>
                 </div>
             </div>
